feat: Add instructions update logic

--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,11 @@
     "action": {
         "default_popup": "hello.html",
         "default_icon": "hello_extensions.png"
-    }
+    },
+    "permissions": [
+        "cookies"        
+    ],
+    "host_permissions": [
+        "https://chat.openai.com/*"
+    ]
 }
