--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
     "description": "A browser extension plugin for managing the Custom instruictions of ChatGPT.",
     "version": "1.0",
     "action": {
-        "default_popup": "hello.html",
+        "default_popup": "index.html",
         "default_icon": "hello_extensions.png"
     },
     "permissions": [
