--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "version": "1.0",
     "action": {
         "default_popup": "index.html",
-        "default_icon": "hello_extensions.png"
+        "default_icon": "action_icon.png"
     },
     "permissions": [
         "cookies"        
